colors: new solarized-like theme with more color

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,22 +3,23 @@ bold_font JetBrains Mono SemiBold
 italic_font JetBrains Mono Italic
 bold_italic_font JetBrains Mono SemiBold Italic
 font_size 16.0
-foreground   #e2e2e2
-background   #000000
-cursor_text_color  #e2e2e2
-color0       #000000
-color8       #474747
-color1       #c57c8b
-color9       #bd836c
-color2       #6e9d5d
-color10      #42a179
-color3       #8d6233
-color11      #ab8c53
-color4       #6495bf
-color12      #918ac4
-color5       #b17fbb
-color13      #c27aa7
-color6       #0da296
-color14      #2c9eaf
-color7       #919191
-color15      #e2e2e2
+foreground   #647B83
+cursor_text_color  #A2BAAB
+background   #FDF6E3
+color15  #FDF6E3
+color7   #CED9C3
+color8   #7E9B97
+color0   #647B83
+
+color1   #DA899A
+color9   #D19278
+color3   #BD9C5D
+color11  #A0A655
+color2   #7AAE67
+color10  #49B386
+color6   #09B4A6
+color14  #30AFC2
+color4   #6FA6D4
+color12  #A199D9
+color5   #C48DCF
+color13  #D787B9
