--- a/freebsd/loader.conf
+++ b/freebsd/loader.conf
@@ -1,17 +1,17 @@
 hw.efi.poweroff=0
-kern.vt.color.0.rgb="#000000"
-kern.vt.color.8.rgb="#474747"
-kern.vt.color.7.rgb="#919191"
-kern.vt.color.15.rgb="#e2e2e2"
-kern.vt.color.1.rgb="#c57c8b"
-kern.vt.color.9.rgb="#bd836c"
-kern.vt.color.3.rgb="#8d6233"
-kern.vt.color.11.rgb="#ab8c53"
-kern.vt.color.2.rgb="#6e9d5d"
-kern.vt.color.10.rgb="#42a179"
-kern.vt.color.4.rgb="#6495bf"
-kern.vt.color.12.rgb="#918ac4"
-kern.vt.color.6.rgb="#0da296"
-kern.vt.color.14.rgb="#2c9eaf"
-kern.vt.color.5.rgb="#b17fbb"
-kern.vt.color.13.rgb="#c27aa7"
+kern.vt.color.15.rgb="#FDF6E3"
+kern.vt.color.7.rgb= "#CED9C3"
+kern.vt.color.8.rgb= "#7E9B97"
+kern.vt.color.0.rgb= "#647B83"
+kern.vt.color.1.rgb= "#DA899A"
+kern.vt.color.9.rgb= "#D19278"
+kern.vt.color.3.rgb= "#BD9C5D"
+kern.vt.color.11.rgb="#A0A655"
+kern.vt.color.2.rgb= "#7AAE67"
+kern.vt.color.10.rgb="#49B386"
+kern.vt.color.4.rgb= "#09B4A6"
+kern.vt.color.12.rgb="#30AFC2"
+kern.vt.color.6.rgb= "#6FA6D4"
+kern.vt.color.14.rgb="#A199D9"
+kern.vt.color.5.rgb= "#C48DCF"
+kern.vt.color.13.rgb="#D787B9"
