--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,23 +3,23 @@ bold_font JetBrains Mono SemiBold
 italic_font JetBrains Mono Italic
 bold_italic_font JetBrains Mono SemiBold Italic
 font_size 16.0
-foreground   #647B83
-cursor_text_color  #A2BAAB
-background   #FDF6E3
-color15  #FDF6E3
-color7   #CED9C3
-color8   #7E9B97
-color0   #647B83
+foreground   #77748D
+cursor_text_color  #A5B8AC
+background   #F5F0E9
+color15  #F5F0E9
+color7   #CED2C5
+color8   #738895
+color0   #77748D
 
-color1   #DA899A
-color9   #D19278
-color3   #BD9C5D
-color11  #A0A655
-color2   #7AAE67
-color10  #49B386
-color6   #09B4A6
-color14  #30AFC2
-color4   #6FA6D4
-color12  #A199D9
-color5   #C48DCF
-color13  #D787B9
+color1   #D38595
+color9   #CA8D75
+color3   #B7975A
+color11  #9BA053
+color2   #76A864
+color10  #48AD82
+color6   #11AEA1
+color14  #31A9BC
+color4   #6BA0CD
+color12  #9C94D2
+color5   #BD89C8
+color13  #D083B3
