color: back to dark

--- a/freebsd/loader.conf
+++ b/freebsd/loader.conf
@@ -1,17 +1,17 @@
 hw.efi.poweroff=0
-kern.vt.color.15.rgb="#FDF6E3"
-kern.vt.color.7.rgb= "#CED9C3"
-kern.vt.color.8.rgb= "#7E9B97"
-kern.vt.color.0.rgb= "#647B83"
-kern.vt.color.1.rgb= "#DA899A"
-kern.vt.color.9.rgb= "#D19278"
-kern.vt.color.3.rgb= "#BD9C5D"
-kern.vt.color.11.rgb="#A0A655"
-kern.vt.color.2.rgb= "#7AAE67"
-kern.vt.color.10.rgb="#49B386"
-kern.vt.color.4.rgb= "#09B4A6"
-kern.vt.color.12.rgb="#30AFC2"
-kern.vt.color.6.rgb= "#6FA6D4"
-kern.vt.color.14.rgb="#A199D9"
-kern.vt.color.5.rgb= "#C48DCF"
-kern.vt.color.13.rgb="#D787B9"
+kern.vt.color.15.rgb="#B9B9B9"
+kern.vt.color.7.rgb= "#6F6F6F"
+kern.vt.color.8.rgb= "#2E2E2E"
+kern.vt.color.0.rgb= "#111111"
+kern.vt.color.1.rgb= "#C97E8D"
+kern.vt.color.9.rgb= "#C0856E"
+kern.vt.color.3.rgb= "#AE8F55"
+kern.vt.color.11.rgb="#93984E"
+kern.vt.color.2.rgb= "#70A05E"
+kern.vt.color.10.rgb="#43A47B"
+kern.vt.color.4.rgb= "#6598C3"
+kern.vt.color.12.rgb="#948CC7"
+kern.vt.color.6.rgb= "#09A599"
+kern.vt.color.14.rgb="#2CA1B2"
+kern.vt.color.5.rgb= "#B481BE"
+kern.vt.color.13.rgb="#C67CAA"
