--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,24 +2,27 @@ font_family JetBrains Mono Regular
 bold_font JetBrains Mono SemiBold
 italic_font JetBrains Mono Italic
 bold_italic_font JetBrains Mono SemiBold Italic
-font_size 16.0
-foreground   #77748D
-cursor_text_color  #A5B8AC
-background   #F5F0E9
-color15  #F5F0E9
-color7   #CED2C5
-color8   #738895
-color0   #77748D
+font_size 20.0
 
-color1   #D38595
-color9   #CA8D75
-color3   #B7975A
-color11  #9BA053
-color2   #76A864
-color10  #48AD82
-color6   #11AEA1
-color14  #31A9BC
-color4   #6BA0CD
-color12  #9C94D2
-color5   #BD89C8
-color13  #D083B3
+background        #111111
+cursor            #4E4E4E
+cursor_text_color #939393
+foreground        #B9B9B9
+
+color0   #111111
+color8   #2E2E2E
+color7   #6F6F6F
+color15  #B9B9B9
+
+color1   #C97E8D
+color9   #C0856E
+color3   #AE8F55
+color11  #93984E
+color2   #70A05E
+color10  #43A47B
+color4   #6598C3
+color12  #948CC7
+color6   #09A599
+color14  #2CA1B2
+color5   #B481BE
+color13  #C67CAA
