--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,8 +1,13 @@
+
+font_size 18.0
+window_padding_width 9
+disable_ligatures cursor
+
 font_family JetBrains Mono Regular
 bold_font JetBrains Mono SemiBold
 italic_font JetBrains Mono Italic
 bold_italic_font JetBrains Mono SemiBold Italic
-font_size 18.0
+
 
 background        #000000
 cursor            #4E4E4E
