--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,6 +2,7 @@
 font_size 18.0
 window_padding_width 9
 disable_ligatures cursor
+placement_strategy left
 
 font_family JetBrains Mono Regular
 bold_font JetBrains Mono SemiBold
@@ -14,7 +15,7 @@ cursor            #4E4E4E
 cursor_text_color #939393
 foreground        #B9B9B9
 
-color0   #111111
+color0   #000000
 color8   #2E2E2E
 color7   #6F6F6F
 color15  #B9B9B9
