completed `.editorconfig`; tweaked git prompt to be `+`

--- a/vim/.editorconfig
+++ b/vim/.editorconfig
@@ -1,14 +1,17 @@
-# editorconfig skeleton file
 root = true
 
 # default config
 [*]
 charset = utf-8
 end_of_line = lf
-indent_style = space
 indent_size = 2
+indent_style = space
 insert_final_newline = true
+tab_width = 4
 trim_trailing_whitespace = true
+
+[*.ini]
+trim_trailing_whitespace = false
 
 # Makefiles must use tabs
 [Makefile]
